--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
             <h3 class="px-4 py-2 md:w-2/3 bg-[#74DC6E] bg-opacity-25 text-primary-light text-opacity-80">Secondary</h3>
           <ul class="text-primary-light mt-4 flex flex-col gap-4">
             <li id="hall" class="flex items-center gap-4">
-              <button onclick="toggleHallState()" class="rounded-full aspect-square p-2" id="hall-btn"></button>
+              <button onclick="toggleHallState()" class="rounded-full p-2 h-12 aspect-square" id="hall-btn"></button>
               Hall-effect sensor
             </li>
             <li id="thermo">
@@ -90,7 +90,7 @@
     const hall = document.getElementById("hall");
     const hallBtn = document.getElementById("hall-btn");
     const emotions = document.querySelectorAll("li.emotion");
-    const emotion = 0;
+    let emotion = 0;
 
     //Setting default as active emotion when inicialized
     emotions[0].classList.add("active");
@@ -117,22 +117,22 @@
     function toggleHallState(){
       if(hallBtn.classList.contains("on")){
         fetch("/hall-effect", {
-          method:"UPDATE",
+          method:"PATCH",
           body: JSON.stringify({state: false})
         }).then((res) => {
           if(res.ok){
             hallBtn.classList.replace("on", "off");
-            hallBtn.innerHTML("OFF")
+            hallBtn.innerHTML = "OFF";
           }
         }).catch(()=>alert("Someting went wrong"))
       }else{
         fetch("/hall-effect", {
-          method:"UPDATE",
+          method:"PATCH",
           body: JSON.stringify({state: true})
         }).then((res) => {
           if(res.ok){
             hallBtn.classList.replace("off", "on");
-            hallBtn.innerHTML("ON")
+            hallBtn.innerHTML = "ON";
           }
         }).catch(()=>alert("Someting went wrong"))
       }
