--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EnginEar | Proto_OS</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='styles/output.css')}}" />
+    <link rel="stylesheet" href="{{url_for('static', filename='/styles/output.css')}}" />
     <link
       rel="shortcut icon"
       href="{{url_for('static', filename='assets/EnginEar_Logo.svg')}}"
@@ -15,14 +15,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
   <body class="relative [background-image:_radial-gradient(#26558C_0%,#090A20_65%)] min-h-screen pt-16">
-    <header class="relative w-full py-4 px-24 flex items-center justify-between">
-      <div class="flex gap-8 items-center h-full">
+    <header class="relative w-full py-4 lg:px-24 md:px-8 px-4 flex items-center justify-between">
+      <div class="flex sm:flex-row flex-col gap-4 sm:gap-8 items-center h-full">
         <img width="64" height="64" alt="Scan logo" src="{{url_for('static', filename='assets/timer.svg')}}" class="mix-blend-normal" />
-        <h2 class="glow-text text-3xl uppercase">Bio scan</h2>
+        <h2 class="glow-text text-lg md:text-2xl lg:text-3xl uppercase">Bio scan</h2>
       </div>
-      <div class="flex items-center gap-8">
-        <h2 class="uppercase glow-text text-3xl">Threat levlel</h2>
-        <div class="min-w-fit flex flex-col items-center gap-4">
+      <div class="flex sm:flex-row flex-col items-center gap-4 sm:gap-8">
+        <h2 class="uppercase sm:order-1 order-2 glow-text text-lg md:text-2xl lg:text-3xl">Threat levlel</h2>
+        <div class="sm:order-2 order-1 min-w-fit flex flex-col items-center gap-4">
           <img class="h-12" src="{{url_for('static', filename='assets/range.svg')}}" alt="Threat-o-meter">
           <div class="bg-primary shadow-[0_0_8px_#9CEEFC] w-full h-[1px] relative flex items-center">
             <div class="absolute bg-primary shadow-[0_0_8px_#9CEEFC] w-4 h-4 [clip-path:polygon(50%_0%,_0%_100%,_100%_100%)]" id="triangle" />
@@ -31,16 +31,16 @@
       </div>
       <div class="absolute top-0 left-0 bg-primary-light w-full h-full mix-blend-soft-light" />
     </header>
-    <main class="mt-16 px-24 w-full grid grid-cols-3 gap-x-8">
+    <main class="mt-16 lg:px-24 md:px-8 px-4 w-full grid md:grid-cols-3 grid-cols-1 md:gap-x-4 lg:gap-x-8 md:gap-y-0 gap-y-8">
       <nav class="">
         <h2 class="bg-primary-light bg-opacity-25 text-2xl glow-text w-full px-4 py-2 text-opacity-80 mb-8">Scan data</h2>
         <ul class="flex flex-col w-full text-white gap-2">
           {% if title == "controls"%}
-            <li class="pl-8 pr-4 py-2 rounded-sm border bg-yellow-500 bg-opacity-80 border-primary-lighter border-opacity-25"><a href="/">Control panel</a></li>
-            <li class="pl-8 pr-4 py-2 rounded-sm border border-primary-lighter border-opacity-25"><a href="/scans">HK-ReSe-024 type Protogen</a></li>
+            <li class="md:pl-8 pl-4 pr-4 py-2 rounded-sm border bg-yellow-500 bg-opacity-80 border-primary-lighter border-opacity-25"><a href="/">Control panel</a></li>
+            <li class="md:pl-8 pl-4 pr-4 py-2 rounded-sm border border-primary-lighter border-opacity-25"><a href="/scans">HK-ReSe-024 type Protogen</a></li>
           {% elif title == "scans" %}
-            <li class="pl-8 pr-4 py-2 rounded-sm border border-primary-lighter border-opacity-25"><a href="/">Control panel</a></li>
-            <li class="pl-8 pr-4 py-2 rounded-sm border bg-yellow-500 bg-opacity-80 border-primary-lighter border-opacity-25"><a href="/scans">HK-ReSe-024 type Protogen</a></li>
+            <li class="md:pl-8 pl-4 pr-4 py-2 rounded-sm border border-primary-lighter border-opacity-25"><a href="/">Control panel</a></li>
+            <li class="md:pl-8 pl-4 pr-4 py-2 rounded-sm border bg-yellow-500 bg-opacity-80 border-primary-lighter border-opacity-25"><a href="/scans">HK-ReSe-024 type Protogen</a></li>
           {%endif%}
         </ul>
       </nav>
@@ -48,17 +48,18 @@
         <h2 class="bg-primary-light bg-opacity-25 text-2xl glow-text w-full px-4 py-2 text-opacity-80 mb-8">
           Emotions
         </h2>
-          <ul class="glow-text flex flex-col items-center justify-between w-full h-full">
-            <li class="emotion" onclick="setEmotion(0)">Default</li>
-            <li class="emotion" onclick="setEmotion(1)">Happy</li>
-            <li class="emotion" onclick="setEmotion(2)">Tired</li>
-            <li class="emotion" onclick="setEmotion(3)">Eyes-closes</li>
-            <li class="emotion" onclick="setEmotion(4)">Angry</li>
-            <li class="emotion" onclick="setEmotion(5)">Furious</li>
-            <li class="emotion" onclick="setEmotion(6)">Confused</li>
-            <li class="emotion" onclick="setEmotion(7)">Thinking</li>
-            <li class="emotion" onclick="setEmotion(8)">Inquestitive</li>
-            <li class="emotion" onclick="setEmotion(9)">Hungary</li>
+          <ul class="max-h-80 glow-text flex md:flex-col md:flex-nowrap flex-wrap md:items-center gap-8 w-full overflow-y-scroll">
+            <li class="emotion md:w-auto w-16" onclick="setEmotion(0)"><img src="{{url_for('static', filename='/assets/Default.png')}}" title="Default" alt="Default" class="w-full h-full"></li>
+            <li class="emotion md:w-auto w-16" onclick="setEmotion(1)"><img src="{{url_for('static', filename='/assets/Happy.png')}}" title="Happy" alt="Happy" class="w-full h-full"></li>
+            <li class="emotion md:w-auto w-16" onclick="setEmotion(2)"><img src="{{url_for('static', filename='/assets/Tired.png')}}" title="Tired" alt="Tired" class="w-full h-full"></li>
+            <li class="emotion md:w-auto w-16" onclick="setEmotion(3)"><img src="{{url_for('static', filename='/assets/Eyes-closed.png')}}" title="Eyes-closed" alt="Eyes-closed" class="w-full h-full"></li>
+            <li class="emotion md:w-auto w-16" onclick="setEmotion(4)"><img src="{{url_for('static', filename='/assets/Angry.png')}}" title="Angry" alt="Angry" class="w-full h-full"></li>
+            <li class="emotion md:w-auto w-16" onclick="setEmotion(5)"><img src="{{url_for('static', filename='/assets/Furious.png')}}" title="Furious" alt="Furious" class="w-full h-full"></li>
+            <li class="emotion md:w-auto w-16" onclick="setEmotion(6)"><img src="{{url_for('static', filename='/assets/Confused.png')}}" title="Confused" alt="Confused" class="w-full h-full"></li>  
+            <li class="emotion md:w-auto w-16" onclick="setEmotion(7)">Thinking</li>
+            <li class="emotion md:w-auto w-16" onclick="setEmotion(8)">Inquestitive</li>
+            <li class="emotion md:w-auto w-16" onclick="setEmotion(9)">Hungary</li>
+            <li class="emotion md:w-auto w-16" onclick="setEmotion(10)">Love</li>
           </ul>
       </section>
       <section class="flex flex-col gap-8">
@@ -76,7 +77,7 @@
             <h3 class="px-4 py-2 md:w-2/3 bg-[#74DC6E] bg-opacity-25 text-primary-light text-opacity-80">Secondary</h3>
           <ul class="text-primary-light mt-4 flex flex-col gap-4">
             <li id="hall" class="flex items-center gap-4">
-              <button onclick="toggleHallState()" class="rounded-full p-2 h-12 aspect-square" id="hall-btn"></button>
+              <button onclick="toggleHallState()" class="transition-all duration-500 rounded-full p-2 h-12 aspect-square" id="hall-btn"></button>
               Hall-effect sensor
             </li>
             <li id="thermo">
