--- a/templates/scans.html
+++ b/templates/scans.html
@@ -24,9 +24,9 @@
     class="pb-16 relative [background-image:_radial-gradient(#26558C_0%,#090A20_65%)] min-h-screen pt-16"
   >
     <header
-      class="relative w-full py-4 px-24 flex items-center justify-between"
+      class="relative w-full py-4 lg:px-24 md:px-8 px-4 flex items-center justify-between"
     >
-      <div class="flex gap-8 items-center h-full">
+      <div class="flex sm:flex-row flex-col gap-4 sm:gap-8 items-center h-full">
         <img
           width="64"
           height="64"
@@ -34,11 +34,19 @@
           src="{{url_for('static', filename='assets/timer.svg')}}"
           class="mix-blend-normal"
         />
-        <h2 class="glow-text text-3xl uppercase">Bio scan</h2>
+        <h2 class="glow-text text-lg md:text-2xl lg:text-3xl uppercase">
+          Bio scan
+        </h2>
       </div>
-      <div class="flex items-center gap-8">
-        <h2 class="uppercase glow-text text-3xl">Threat levlel</h2>
-        <div class="min-w-fit flex flex-col items-center gap-4">
+      <div class="flex sm:flex-row flex-col items-center gap-4 sm:gap-8">
+        <h2
+          class="uppercase sm:order-1 order-2 glow-text text-lg md:text-2xl lg:text-3xl"
+        >
+          Threat levlel
+        </h2>
+        <div
+          class="sm:order-2 order-1 min-w-fit flex flex-col items-center gap-4"
+        >
           <img
             class="h-12"
             src="{{url_for('static', filename='assets/range.svg')}}"
@@ -58,8 +66,8 @@
         class="absolute top-0 left-0 bg-primary-light w-full h-full mix-blend-soft-light"
       />
     </header>
-    <main class="mt-16 px-24 w-full grid grid-cols-3 gap-x-8">
-      <nav class="">
+    <main class="mt-16 lg:px-24 md:px-8 px-4 w-full grid grid-cols-3 gap-x-8">
+      <nav class="md:col-span-1 col-span-full col-start-1">
         <h2
           class="bg-primary-light bg-opacity-25 text-2xl glow-text w-full px-4 py-2 text-opacity-80 mb-8"
         >
@@ -93,19 +101,35 @@
             <img
               src="{{url_for('static', filename='assets/EnginEar_front.png')}}"
               alt="EnginEar front"
-              class="mix-blend-plus-lighter object-scale-down"
+              class="hidden md:inline mix-blend-plus-lighter object-scale-down"
             />
           </li>
           <li>
             <img
               src="{{url_for('static', filename='assets/EnginEar_left.png')}}"
               alt="EnginEar side"
-              class="mix-blend-plus-lighter object-scale-down"
+              class="hidden md:inline mix-blend-plus-lighter object-scale-down"
             />
           </li>
         </ul>
       </nav>
-      <section class="col-span-2">
+      <section
+        class="col-span-full sm:col-span-1 col-start-1 row-start-2 md:hidden flex flex-col items-center sm:justify-between justify-end gap-8 h-full"
+      >
+        <img
+          src="{{url_for('static', filename='assets/EnginEar_front.png')}}"
+          alt="EnginEar front"
+          class="mix-blend-plus-lighter object-scale-down"
+        />
+        <img
+          src="{{url_for('static', filename='assets/EnginEar_left.png')}}"
+          alt="EnginEar side"
+          class="mix-blend-plus-lighter object-scale-down"
+        />
+      </section>
+      <section
+        class="sm:col-span-2 col-span-full md:row-start-1 row-start-2 md:col-start-2"
+      >
         <div
           class="relative mb-8 overflow-hidden border-2 border-primary rounded"
         >
