--- a/templates/input.css
+++ b/templates/input.css
@@ -30,6 +30,14 @@
   @apply text-orange-400 border-2 border-orange-400 bg-[radial-gradient(#fb923c00_25%,#fb923cFF_100%)] shadow-[0_0_8px] shadow-orange-500;
 }
 
+.huon {
+  @apply text-green-400 border-2 border-green-400 bg-[radial-gradient(#47705000_25%,#FFFFFFA0_50%,#CE2939FF_100%)] shadow-[0_0_8px] shadow-green-400;
+}
+
+.huoff {
+  @apply text-orange-400 border-2 border-orange-400 bg-[radial-gradient(#fb923c00_25%,#fb923cFF_100%)] shadow-[0_0_8px] shadow-orange-500;
+}
+
 p#binary {
   font-size: 1.25em;
   color: rgba(255, 255, 255, 0.1);
