--- a/templates/input.css
+++ b/templates/input.css
@@ -31,7 +31,7 @@
 }
 
 .huon {
-  @apply text-green-400 border-2 border-green-400 bg-[radial-gradient(#47705000_25%,#FFFFFFA0_50%,#CE2939FF_100%)] shadow-[0_0_8px] shadow-green-400;
+  @apply text-green-400 border-2 border-[#CE2939FF] bg-[radial-gradient(#477050A0_25%,#ffffffff_100%)] shadow-[0_0_8px] shadow-green-400;
 }
 
 .huoff {
