--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         <h2 class="glow-text text-lg md:text-2xl lg:text-3xl uppercase">Bio scan</h2>
       </div>
       <div class="flex sm:flex-row flex-col items-center gap-4 sm:gap-8">
-        <h2 class="uppercase sm:order-1 order-2 glow-text text-lg md:text-2xl lg:text-3xl">Threat levlel</h2>
+        <h2 class="uppercase sm:order-1 order-2 glow-text text-lg md:text-2xl lg:text-3xl">Threat level</h2>
         <div class="sm:order-2 order-1 min-w-fit flex flex-col items-center gap-4">
           <img class="h-12" src="{{url_for('static', filename='assets/range.svg')}}" alt="Threat-o-meter">
           <div class="bg-primary shadow-[0_0_8px_#9CEEFC] w-full h-[1px] relative flex items-center">
@@ -55,9 +55,9 @@
             <li class="emotion md:w-auto w-16" onclick="setEmotion(3)"><img src="{{url_for('static', filename='/assets/Eyes-closed.png')}}" title="Eyes-closed" alt="Eyes-closed" class="w-full h-full"></li>
             <li class="emotion md:w-auto w-16" onclick="setEmotion(4)"><img src="{{url_for('static', filename='/assets/Angry.png')}}" title="Angry" alt="Angry" class="w-full h-full"></li>
             <li class="emotion md:w-auto w-16" onclick="setEmotion(5)"><img src="{{url_for('static', filename='/assets/Furious.png')}}" title="Furious" alt="Furious" class="w-full h-full"></li>
-            <li class="emotion md:w-auto w-16" onclick="setEmotion(6)"><img src="{{url_for('static', filename='/assets/Confused.png')}}" title="Confused" alt="Confused" class="w-full h-full"></li>  
-            <li class="emotion md:w-auto w-16" onclick="setEmotion(7)"><img src="{{url_for('static', filename='/assets/Thinking.png')}}" title="Thinking" alt="Thinking" class="w-full h-full"></li>
-            <li class="emotion md:w-auto w-16" onclick="setEmotion(8)"><img src="{{url_for('static', filename='/assets/Inquestitive.png')}}" title="Inquestitive" alt="Inquestitive" class="w-full h-full"></li>
+            <li class="emotion md:w-auto w-16" onclick="setEmotion(6)"><img src="{{url_for('static', filename='/assets/Thinking.png')}}" title="Thinking" alt="Thinking" class="w-full h-full"></li>
+            <li class="emotion md:w-auto w-16" onclick="setEmotion(7)"><img src="{{url_for('static', filename='/assets/Inquestitive.png')}}" title="Inquestitive" alt="Inquestitive" class="w-full h-full"></li>
+            <li class="emotion md:w-auto w-16" onclick="setEmotion(8)"><img src="{{url_for('static', filename='/assets/Confused.png')}}" title="Confused" alt="Confused" class="w-full h-full"></li>  
             <li class="emotion md:w-auto w-16" onclick="setEmotion(9)"><img src="{{url_for('static', filename='/assets/Love.png')}}" title="Love" alt="Love" class="w-full h-full"></li>
           </ul>
       </section>
@@ -126,7 +126,7 @@
       if(hallBtn.classList.contains("on")){
         fetch("/hall-effect", {
           method:"POST",
-          body: JSON.stringify({state: -1}),
+          body: JSON.stringify({state: "False"}),
           headers:{
             "Content-Type":"application/json"
           }
@@ -139,7 +139,7 @@
       }else{
         fetch("/hall-effect", {
           method:"POST",
-          body: JSON.stringify({state: 1}),
+          body: JSON.stringify({state: "True"}),
           headers:{
             "Content-Type":"application/json"
           }
@@ -159,7 +159,7 @@
       if(hungary.classList.contains("huon")){
         fetch("/hungary", {
           method:"POST",
-          body: JSON.stringify({state: -1}),
+          body: JSON.stringify({state: "False"}),
           headers:{
             "Content-Type":"application/json"
           }
@@ -172,7 +172,7 @@
       }else{
         fetch("/hungary", {
           method:"POST",
-          body: JSON.stringify({state: 1}),
+          body: JSON.stringify({state: "True"}),
           headers:{
             "Content-Type":"application/json"
           }
