--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
             </li>
             <li class="flex items-center gap-4">
               <button onclick="togglePatroitismMode()" class="transition-all duration-500 rounded-full p-2 h-12 aspect-square" id="hungary">ON</button>
-              Patroitism mode
+              Patriotism mode
             </li>
             <li id="thermo">
               Thermomemter
