--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,8 @@
   <script>
     const triangle = document.getElementById("triangle");
     const os = document.getElementById("os");
-    const hallState = true;
+    let hallState = {{ hall_effect|tojson }};
+    let patriotismState = {{ patriotism|tojson }};
     const hall = document.getElementById("hall");
     const hallBtn = document.getElementById("hall-btn");
     const emotions = document.querySelectorAll("li.emotion");
@@ -120,10 +121,15 @@
     })
 
     //Hall-effect sensor
-    hallBtn.innerHTML = "ON";
-    hallBtn.classList.add("on");
+    if(hallState){
+      hallBtn.innerHTML = "ON";
+      hallBtn.classList.add("on");
+    }else{
+      hallBtn.innerHTML = "OFF";
+      hallBtn.classList.add("off");
+    }
     function toggleHallState(){
-      if(hallBtn.classList.contains("on")){
+      if(hallState){
         fetch("/hall-effect", {
           method:"POST",
           body: JSON.stringify({state: "False"}),
@@ -134,6 +140,7 @@
           if(res.ok){
             hallBtn.classList.replace("on", "off");
             hallBtn.innerHTML = "OFF";
+            hallState = !hallState
           }
         }).catch(()=>alert("Someting went wrong"))
       }else{
@@ -147,14 +154,21 @@
           if(res.ok){
             hallBtn.classList.replace("off", "on");
             hallBtn.innerHTML = "ON";
+            hallState = !hallState
           }
         }).catch(()=>alert("Someting went wrong"))
       }
     }
 
     //Patroitism mode
-    hungary.innerHTML = "OFF";
-    hungary.classList.add("huoff");
+    if(patriotismState){
+      hungary.innerHTML = "ON";
+      hungary.classList.add("huon");
+    }
+    else{
+      hungary.innerHTML = "OFF";
+      hungary.classList.add("huoff");
+    }
     function togglePatroitismMode(){
       if(hungary.classList.contains("huon")){
         fetch("/hungary", {
@@ -167,6 +181,7 @@
           if(res.ok){
             hungary.classList.replace("huon", "huoff");
             hungary.innerHTML = "OFF";
+            patriotismState = !patriotismState
           }
         }).catch(()=>alert("Someting went wrong"))
       }else{
@@ -180,6 +195,7 @@
           if(res.ok){
             hungary.classList.replace("huoff", "huon");
             hungary.innerHTML = "ON";
+            patriotismState = !patriotismState
           }
         }).catch(()=>alert("Someting went wrong"))
       }
