--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
             <li class="emotion md:w-auto w-16" onclick="setEmotion(3)"><img src="{{url_for('static', filename='/assets/Eyes-closed.png')}}" title="Eyes-closed" alt="Eyes-closed" class="w-full h-full"></li>
             <li class="emotion md:w-auto w-16" onclick="setEmotion(4)"><img src="{{url_for('static', filename='/assets/Angry.png')}}" title="Angry" alt="Angry" class="w-full h-full"></li>
             <li class="emotion md:w-auto w-16" onclick="setEmotion(5)"><img src="{{url_for('static', filename='/assets/Furious.png')}}" title="Furious" alt="Furious" class="w-full h-full"></li>
-            <li class="emotion md:w-auto w-16" onclick="setEmotion(6)"><img src="{{url_for('static', filename='/assets/Thinking.png')}}" title="Thinking" alt="Thinking" class="w-full h-full"></li>
+            <li class="emotion md:w-auto w-16" onclick="setEmotion(6)"><img src="{{url_for('static', filename='/assets/Sad.png')}}" title="Sad" alt="Sad" class="w-full h-full"></li>
             <li class="emotion md:w-auto w-16" onclick="setEmotion(7)"><img src="{{url_for('static', filename='/assets/Inquestitive.png')}}" title="Inquestitive" alt="Inquestitive" class="w-full h-full"></li>
             <li class="emotion md:w-auto w-16" onclick="setEmotion(8)"><img src="{{url_for('static', filename='/assets/Confused.png')}}" title="Confused" alt="Confused" class="w-full h-full"></li>  
             <li class="emotion md:w-auto w-16" onclick="setEmotion(9)"><img src="{{url_for('static', filename='/assets/Love.png')}}" title="Love" alt="Love" class="w-full h-full"></li>
