--- a/static/styles/output.css
+++ b/static/styles/output.css
@@ -7,6 +7,88 @@
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
 
+input[type="range"] {
+  -webkit-appearance: none;
+  margin: 18px 0;
+  width: 100%;
+}
+input[type="range"]:focus {
+  outline: none;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 4px;
+  cursor: pointer;
+  box-shadow: 0 0 8px #06b6d4;
+  background: #9ceefc;
+  border-radius: 0.5rem;
+}
+input[type="range"]::-webkit-slider-thumb {
+  box-shadow: 0 0 8px #06b6d4;
+  border: 2px solid #06b6d4;
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  background-image: radial-gradient(#06b6d400 25%, #06b6d4ff 100%);
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -22px;
+}
+input[type="range"]:focus::-webkit-slider-runnable-track {
+  background: #9ceefc;
+}
+input[type="range"]::-moz-range-track {
+  width: 100%;
+  height: 4px;
+  cursor: pointer;
+  box-shadow: 0 0 8px #06b6d4;
+  background: #9ceefc;
+  border-radius: 0.5rem;
+}
+input[type="range"]::-moz-range-thumb {
+  box-shadow: 0 0 8px #06b6d4;
+  border: 2px solid #06b6d4;
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  background-image: radial-gradient(#06b6d400 25%, #06b6d4ff 100%);
+  cursor: pointer;
+}
+input[type="range"]::-ms-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+input[type="range"]::-ms-fill-lower {
+  border-radius: 1rem;
+  box-shadow: 0 0 8px #06b6d4;
+  background: #9ceefc;
+}
+input[type="range"]::-ms-fill-upper {
+  border-radius: 1rem;
+  box-shadow: 0 0 8px #06b6d4;
+  background: #9ceefc;
+}
+input[type="range"]::-ms-thumb {
+  box-shadow: 0 0 8px #06b6d4;
+  border: 2px solid #06b6d4;
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  background-image: radial-gradient(#06b6d400 25%, #06b6d4ff 100%);
+  cursor: pointer;
+}
+input[type="range"]:focus::-ms-fill-lower {
+  background: #9ceefc;
+}
+input[type="range"]:focus::-ms-fill-upper {
+  background: #9ceefc;
+}
+
 *,
 ::before,
 ::after {
