--- a/templates/index.html
+++ b/templates/index.html
@@ -70,6 +70,9 @@
           <ul class="text-primary-light mt-4 flex flex-col gap-4">
             <li>Power</li>
             <li id="os"></li>
+            <li id="fan">
+              <input type="range" max="100" min="0" step="10" >
+            </li>
           </ul>
         </div>
           <div>
@@ -82,9 +85,6 @@
             <li class="flex items-center gap-4">
               <button onclick="togglePatroitismMode()" class="transition-all duration-500 rounded-full p-2 h-12 aspect-square" id="hungary">ON</button>
               Patriotism mode
-            </li>
-            <li id="thermo">
-              Thermomemter
             </li>
           </ul>
         </div>
