--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
-  <body class="relative [background-image:_radial-gradient(#26558C_0%,#090A20_65%)] min-h-screen pt-16">
+  <body class="relative min-h-screen pt-16">
     <header class="relative w-full py-4 lg:px-24 md:px-8 px-4 flex items-center justify-between">
       <div class="flex sm:flex-row flex-col gap-4 sm:gap-8 items-center h-full">
         <img width="64" height="64" alt="Scan logo" src="{{url_for('static', filename='assets/timer.svg')}}" class="mix-blend-normal" />
@@ -162,6 +162,14 @@
         }
       }).catch(()=>{
         window.alert("Something went wrong!");
+      }).finally(()=>{
+        if(raveState){
+          raveBtn.classList.remove("off");
+          raveBtn.classList.add("on");
+        }else{
+          raveBtn.classList.remove("on");
+          raveBtn.classList.add("off");
+        }
       });
     }
 
@@ -190,6 +198,13 @@
       }).catch(()=>{
         window.alert("Something went wrong!");
       });
+      if(patriotismState){
+        hungary.classList.remove("huoff");
+        hungary.classList.add("huon");
+      }else{
+        hungary.classList.remove("huon");
+        hungary.classList.add("huoff");
+      }
     }
 
     //Threat level indicator
