--- a/templates/input.css
+++ b/templates/input.css
@@ -7,7 +7,24 @@
 }
 
 .emotion.active {
-  @apply bg-opacity-10;
+  @apply bg-opacity-10 rounded;
+}
+
+#triangle {
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+}
+
+body {
+  background-image: radial-gradient(#26558c 0%, #090a20 65%);
+}
+
+#threat-slide,
+#triangle {
+  box-shadow: 0 1px 3px 0 #9ceefc;
+}
+
+#threat-slide {
+  height: 1px;
 }
 
 input[type="range"] {
