--- a/templates/scans.html
+++ b/templates/scans.html
@@ -146,7 +146,7 @@
           Mechanical Components
         </h2>
         <h3
-          class="mb-4 px-4 py-2 md:w-2/3 bg-[#74DC6E] bg-opacity-25 text-primary-light text-opacity-80"
+          class="md-4 px-4 py-2 md:w-2/3 bg-title bg-opacity-25 text-primary-light text-opacity-80"
         >
           Primary
         </h3>
@@ -165,7 +165,7 @@
           </dd>
         </dl>
         <h3
-          class="mt-4 mb-4 px-4 py-2 md:w-2/3 bg-[#74DC6E] bg-opacity-25 text-primary-light text-opacity-80"
+          class="mt-4 mb-4 px-4 py-2 md:w-2/3 bg-title bg-opacity-25 text-primary-light text-opacity-80"
         >
           Secondary
         </h3>
