--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
           Functions
         </h2>
         <div>
-          <h3 class="px-4 py-2 md:w-2/3 bg-[#74DC6E] bg-opacity-25 text-primary-light text-opacity-80">Primary</h3>
+          <h3 class="px-4 py-2 md:w-2/3 bg-title bg-opacity-25 text-primary-light text-opacity-80">Primary</h3>
           <ul class="text-primary-light mt-4 flex flex-col gap-4">
             <li>Power</li>
             <li id="os"></li>
@@ -76,7 +76,7 @@
           </ul>
         </div>
           <div>
-            <h3 class="px-4 py-2 md:w-2/3 bg-[#74DC6E] bg-opacity-25 text-primary-light text-opacity-80">Secondary</h3>
+            <h3 class="px-4 py-2 md:w-2/3 bg-title bg-opacity-25 text-primary-light text-opacity-80">Secondary</h3>
           <ul class="text-primary-light mt-4 flex flex-col gap-4">
             <li class="flex items-center gap-4">
               <button onclick="toggleRaveMode()" class="transition-all duration-500 rounded-full p-2 w-12 h-12 aspect-square" id="rave-btn"></button>
