--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
     const fanRange = document.getElementById("fan");
     const eyeBtn = document.getElementById("eye-btn");
     const mouthBtn = document.getElementById("mouth-btn");
-    let emotcion = 0;
+    let emotion = 0;
 
     //Setting default as active emotion when inicialized
     emotions[0].classList.add("active");
